# algorithm

./: CMakeLists.txt
sorting/: CMakeLists.txt  factorial.cpp
sorting/insertion_sort/: CMakeLists.txt  insertionSort.cpp
sorting/merge_sort/: CMakeLists.txt  merge_sort.cpp
sorting/quick_sort/: CMakeLists.txt  quickSort.cpp
yandex_algorithms/: CMakeLists.txt
yandex_algorithms/first_week/: CMakeLists.txt
yandex_algorithms/first_week/prisoner_of_if/: CMakeLists.txt  prisoner_of_if.cpp
